fix scrollbar

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -8,7 +8,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: scroll;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
 
