--- a/scss/base/_layout.scss
+++ b/scss/base/_layout.scss
@@ -24,6 +24,7 @@
     &__content {
       margin-left: 250px;
       width: 100%;
+      z-index: 1;
     }
   }
   @include lg {
